--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
     </header>
 
-    <div class="panel panel-default">
+    <section class="panel panel-default">
       <div class="panel-heading">
         Daily Log of the events that happened during Carbon's recovery,
         basically what drugs he got when.</div>
@@ -30,16 +30,11 @@
       </div>
 
       <table class="table table-striped">
-          <thead>
+          <thead ng-controller="MedController as medCtrl">
               <tr>
                   <th> Day           </th>
-                  <th> date          </th>
-                  <th> Omeprazol     </th>
-                  <th> Clindamicina  </th>
-                  <th> Metronidazol  </th>
-                  <th> Enrofloxacina </th>
-                  <th> Rimadyl       </th>
-                  <th> Tramadol      </th>
+                  <th> Date          </th>
+                  <th ng-repeat="med in medCtrl.getMeds()"> {{med}} </th>
               </tr>
           </thead>
           <tbody ng-controller="TimeController as time">
@@ -47,29 +42,45 @@
                 ng-repeat="event in time.events"
                 ng-controller="EventController as E"
                 ng-init="E.init(event)">
-                  <td> {{$index + 1}} </td>
+                  <td> <em> {{$index + 1}} </em> </td>
                   <td> {{event[0] | date}} </td>
-                  <td ng-repeat="i in [0, 1, 2, 3, 4, 5]">
+                  <td ng-repeat="i in [0, 1, 2, 3, 4, 5, 6]">
                     <span ng-show="E.hasMeds(i)">
                       <span
                         class="label"
-                        ng-class="{'label-primary':E.getMed(i) > 0,'label-default':E.getMed(i) < 0}"
-                        ng-repeat="x in E.getMedsRange(i) track by $index"
-                      > {{E.med(i)}}
+                        ng-repeat="dose in E.getMed(i) track by $index"
+                        ng-class="{'label-primary':E.adminHome(i, $index),'label-default':E.adminClinic(i, $index)}">
+                          {{E.med(i, dose)}}
                       </span>
                     </span>
                   </td>
               </tr>
           </tbody>
       </table>
-    </div>
+    </section>
 
     <footer>
         <div class="hero-unit">
             <div class="container">
                 <p>
-                <span class="label label-primary">Administered at home</span>
-                <span class="label label-default">Administered in the clinic</span>
+                  <span class="label label-primary">Administered at home</span>
+                  <span class="label label-default">Administered in the clinic</span>
+                </p>
+                <p class="alert alert-info">
+                  <span class="glyphicon glyphicon-hand-right"></span>
+                  Notes on <strong>Cannabis</strong>: dosage before June
+                      18th is estimated.
+                </p>
+                <p class="alert alert-info">
+                  <span class="glyphicon glyphicon-hand-right"></span>
+                  Notes on <strong>Carprofen</strong>: Rimadyl used through
+                      June 12th, then he started getting Carproby from Bayer.
+                </p>
+                <p class="alert alert-info">
+                  <span class="glyphicon glyphicon-hand-right"></span>
+                  Notes for <strong>June 2nd - 5th</strong>: Probably he got
+                      some hard-core opiates in the Clinic but we are not sure
+                      what he got actually.
                 </p>
             </div>
         </div>
