--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Carbon Recovery Calendar</title>
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="app.css" />
     <script type="text/javascript" src="angular.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
