--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>Carbon Recovery Calendar</title>
     <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="app.css" />
-    <script type="text/javascript" src="angular.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/app.css" />
+    <script type="text/javascript" src="js/angular.min.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
   </head>
 
   <body>
