data moved to json files and retrieved via $http service

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                 </p>
                 <p class="alert alert-info">
                   <span class="glyphicon glyphicon-hand-right"></span>
-                  Notes on <strong>Carprofen</strong>: Rimadyl used through
-                      June 12th, then he started getting Carproby from Bayer.
+                  Notes on <strong>Carprofen</strong>: Rimadyl used except for
+                      June 13-16 when he got Carprobay from Bayer.
                 </p>
                 <p class="alert alert-info">
                   <span class="glyphicon glyphicon-hand-right"></span>
