use chained module controllers

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="TimelionApp">
+<html ng-app="TimelionCarbonApp">
   <head>
     <title>Carbon Recovery Calendar</title>
     <link rel="icon" href="favicon.ico" />
