fix med names list

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   <th> Day           </th>
                   <th> Date          </th>
                   <th> Clinic        </th>
-                  <th ng-repeat="med in getAllMedNames()" ng-bind="med"></th>
+                  <th ng-repeat="name in medicine_names" ng-bind="name"></th>
               </tr>
           </thead>
           <tbody ng-controller="TimeController">
