--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title> Carbon Recovery Calendar </title>
     <link rel="icon" href="favicon.ico"/>
     <link rel="stylesheet" type="text/css" href="css/app.css"/>
+    <script type="text/javascript" src="js/jquery-1.11.1.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/angular.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
   </head>
@@ -31,11 +33,33 @@
 
       <table class="table table-striped">
           <thead ng-controller="MedController">
-              <tr>
-                  <th> Day           </th>
-                  <th> Date          </th>
-                  <th> Clinic        </th>
-                  <th ng-repeat="name in medicine_names" ng-bind="name"></th>
+              <tr
+              >
+                  <th> Day    </th>
+                  <th> Date   </th>
+                  <th> Clinic </th>
+                  <th
+                    ng-repeat="med in meds"
+                    bs-popover
+                    ><span
+                      data-container="th"
+                      data-original-title="{{med.engl}}"
+                      data-placement="top"
+                      data-toggle="tooltip"
+                      ><button
+                        type="button"
+                        class="btn btn-default"
+                        data-container="th"
+                        data-content="<p>{{med.pron}}</p><ul><li><i>{{med.bran}}</i></ul><p>{{med.html}}</p>"
+                        data-html="true"
+                        data-original-title="<h2><a href='{{med.link}}'>{{med.engl}}</a></h2>"
+                        data-placement="bottom"
+                        data-toggle="popover"
+                        ng-bind="med.name"
+                      ></button>
+                    </span>
+                    <!-- <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="right" title="Tooltip on right">Tooltip on right</button> -->
+                  </th>
               </tr>
           </thead>
           <tbody ng-controller="TimeController">
