--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,9 @@
           <li><a href="#/view1">view1</a></li>
           <li><a href="#/view2">view2</a></li>
         </ul>
-        <div id="plug">Angular seed app: v<span app-version></span></div>
+        <div id="plug">
+          <p>Angular seed app: v<span app-version></span></p>
+        </div>
       </div>
     </div>
   </footer>
