add notes row hover

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
   <header>
     <div class="hero-unit">
       <div class="container">
-        <h1> Carbon Recovery Calendar </h1>
+        <h1> Carbon 2014 Recovery Calendar </h1>
         <p> A time-line for what, when &amp; how Carbie is healing. </p>
       </div>
     </div>
