--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="bower_components/ng-grid/ng-grid.css">
   <link rel="stylesheet" href="css/app.css"/>
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
   <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -47,45 +48,6 @@
   <footer>
     <div class="hero-unit">
       <div class="container">
-        <p>
-         <span class="label label-primary">Zosia observed</span>
-         <span class="label label-default">Zosia did not observe</span>
-         Visits to clinics
-         <span class="badge miceli">Miceli</span>:
-         <span class="badge miceli">C</span>Carbon
-         <span class="badge miceli">Z</span>Zosia
-         <span class="badge miceli">A</span>Aga
-         <span class="badge miceli">R</span>Rocio
-         <span class="badge miceli">S</span>Steven
-         <span class="badge marina">Marina</span>:
-         <span class="badge marina">C</span>Carbon
-         <span class="badge marina">Z</span>Zosia
-         <span class="badge marina">S</span>Steven
-        </p>
-        <p class="alert alert-info">
-         <span class="glyphicon glyphicon-hand-right"></span>
-         Notes on <strong>Cannabis</strong>: dosage before June
-           18th is estimated.
-        </p>
-        <p class="alert alert-info">
-         <span class="glyphicon glyphicon-hand-right"></span>
-         Notes on <strong>Carprofen</strong>: Rimadyl used except for
-           June 13-16 when he got Carprobay from Bayer.
-        </p>
-        <p class="alert alert-info">
-         <span class="glyphicon glyphicon-hand-right"></span>
-         Notes for <strong>June 2nd - 5th</strong>: Probably he got
-           some hard-core opiates in the Clinic but we are not sure
-           what he got actually.
-        </p>
-        <p class="alert alert-info">
-         <span class="glyphicon glyphicon-hand-right"></span>
-         Notes for <strong>June 23rd</strong>: Received 1 ml of Xilacina
-         (Xylazine sold as Rompun by Bayer) in Marina's clinic to calm
-         him for his X-ray. Even though he was sedated he still fought
-         like hell to not allow us to turn him upside down, which might
-         have contributed to the hip joint noise becoming very ould now.
-        </p>
         <div id="plug">
           <p>Angular seed app: v<span app-version></span> and we can also
              say {{ 'v%VERSION%.' | interpolate }}
@@ -97,6 +59,8 @@
 
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/ng-grid/build/ng-grid.js"></script>
+  <script src="bower_components/ng-grid/plugins/ng-grid-flexible-height.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
