--- a/app/index.html
+++ b/app/index.html
@@ -38,8 +38,9 @@
       Saturday.  This log beings when he had his surgery, the following Monday,
       June 2nd. </p>
       <ul class="menu">
-        <li><a href="#/view1">Meds</a></li>
-        <li><a href="#/view2">Costs</a></li>
+        <li><a href="#/"    > Home  </a></li>
+        <li><a href="#/meds"> Meds  </a></li>
+        <li><a href="#/cost"> Costs </a></li>
       </ul>
     </div>
     <div ng-view></div>
@@ -49,7 +50,7 @@
     <div class="hero-unit">
       <div class="container">
         <div id="plug">
-          <p>Angular seed app: v<span app-version></span> and we can also
+          <p>Timelion Carbon app: v<span app-version></span> and we can also
              say {{ 'v%VERSION%.' | interpolate }}
           </p>
         </div>
