--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="panel-body">
       <p> Carbie's femur found a car's bumper on the last day of May 2014, a
-      Saturday.  This log beings when he had his surgery, the following Monday,
+      Saturday.  This log begins when he had his surgery, the following Monday,
       June 2nd. </p>
       <ul class="menu">
         <li><a href="#/"    > Home  </a></li>
