--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My AngularJS App</title>
+  <title> Carbon </title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
@@ -22,7 +22,7 @@
   <header>
     <div class="hero-unit">
       <div class="container">
-        <h1> Carbon 2014 Recovery Calendar </h1>
+        <h1> Carbon 2014-2015 Recovery Calendar </h1>
         <p> A time-line for what, when &amp; how Carbie is healing. </p>
       </div>
     </div>
@@ -38,9 +38,10 @@
       Saturday.  This log begins when he had his surgery, the following Monday,
       June 2nd. </p>
       <ul class="menu">
-        <li><a href="#/"    > Home  </a></li>
-        <li><a href="#/meds"> Meds  </a></li>
-        <li><a href="#/cost"> Costs </a></li>
+        <li><a href="#/"     > Home  </a></li>
+        <li><a href="#/meds" > Meds  </a></li>
+        <li><a href="#/notes"> Notes </a></li>
+        <li><a href="#/costs"> Costs </a></li>
       </ul>
     </div>
     <div ng-view></div>
