fix Carbi spelling

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title> Carbon </title>
+  <title> Carbón </title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
@@ -22,19 +22,19 @@
   <header>
     <div class="hero-unit">
       <div class="container">
-        <h1> Carbon 2014-2015 Recovery Calendar </h1>
-        <p> A time-line for what, when &amp; how Carbie is healing. </p>
+        <h1> Carbón (a.k.a "Carbi") 2014-2015 Recovery Calendar </h1>
+        <p> A time-line for what, when &amp; how Carbi is healing. </p>
       </div>
     </div>
   </header>
 
   <section class="panel panel-default">
     <div class="panel-heading">
-      <p> Daily Log of the events that happened during Carbon's recovery,
+      <p> Daily Log of the events that happened during Carbón's recovery,
       basically what drugs he got when. </p>
     </div>
     <div class="panel-body">
-      <p> Carbie's femur found a car's bumper on the last day of May 2014, a
+      <p> Carbi's femur found a car's bumper on the last day of May 2014, a
       Saturday.  This log begins when he had his surgery, the following Monday,
       June 2nd. </p>
       <ul class="menu">
@@ -51,7 +51,7 @@
     <div class="hero-unit">
       <div class="container">
         <div id="plug">
-          <p>Timelion Carbon app: v<span app-version></span> and we can also
+          <p>Timelion Carbón app: v<span app-version></span> and we can also
              say {{ 'v%VERSION%.' | interpolate }}
           </p>
         </div>
