split events data into separate files: meds, notes, clinics

--- a/app/index.html
+++ b/app/index.html
@@ -64,5 +64,6 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
+  <script src="js/utils.js"></script>
 </body>
 </html>
