--- a/app/index.html
+++ b/app/index.html
@@ -22,21 +22,16 @@
   <header>
     <div class="hero-unit">
       <div class="container">
-        <h1> Carbón (a.k.a "Carbi") 2014-2015 Recovery Calendar </h1>
-        <p> A time-line for what, when &amp; how Carbi is healing. </p>
+        <h1 align="center"> Carbón (a.k.a "Carbi") 2014-2015 Recovery Calendar </h1>
       </div>
     </div>
   </header>
 
   <section class="panel panel-default">
     <div class="panel-heading">
-      <p> Daily Log of the events that happened during Carbón's recovery,
-      basically what drugs he got when. </p>
+      <p> A time-line for what, when &amp; how Carbi is healing. </p>
     </div>
     <div class="panel-body">
-      <p> Carbi's femur found a car's bumper on the last day of May 2014, a
-      Saturday.  This log begins when he had his surgery, the following Monday,
-      June 2nd. </p>
       <ul class="menu">
         <li><a href="#/"     > Home  </a></li>
         <li><a href="#/meds" > Meds  </a></li>
