remove data cannabis not good for dogs

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
 
   <section class="panel panel-default">
     <div class="panel-heading">
-      <p> A time-line for what, when &amp; how Carbi is healing. </p>
+      <p align="right" style="font-size: 1.3em"> A time-line for what, when &amp; how Carbi is healing. </p>
     </div>
     <div class="panel-body">
       <ul class="menu">
