--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,7 @@
       <ul class="menu">
         <li><a href="#/"     > Home  </a></li>
         <li><a href="#/meds" > Meds  </a></li>
+        <li><a href="#/xrays"> Xrays </a></li>
         <li><a href="#/notes"> Notes </a></li>
         <li><a href="#/costs"> Costs </a></li>
       </ul>
