--- a/app/index.html
+++ b/app/index.html
@@ -47,9 +47,7 @@
     <div class="hero-unit">
       <div class="container">
         <div id="plug">
-          <p>Timelion Carbón app: v<span app-version></span> and we can also
-             say {{ 'v%VERSION%.' | interpolate }}
-          </p>
+          Timelion Carbón app: v<span tc-version></span>
         </div>
       </div>
     </div>
