--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
     <div class="hero-unit">
       <div class="container">
         <div id="plug">
-          Timelion Carbón app: v<span tc-version></span>
+          <p><img src="img/wikipedia_de_200px-Copyleft.svg.png" width="18px"> 2015 v<span tc-version></span></p>
         </div>
       </div>
     </div>
