adjust page headers

--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,12 @@
     <div class="hero-unit">
       <div class="container">
         <div id="plug">
-          <p><img src="img/wikipedia_de_200px-Copyleft.svg.png" width="18px"> 2015 v<span tc-version></span></p>
+          <p>
+              2015
+            <img src="img/wikipedia_de_200px-Copyleft.svg.png" width="16px">
+            Carbón
+            v<span tc-version></span>
+          </p>
         </div>
       </div>
     </div>
