swap home & front

--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
     </div>
     <div class="panel-body">
       <ul class="menu">
-        <li><a href="#/"     > Home  </a></li>
+        <li><a href="#/home" > Home  </a></li>
         <li><a href="#/meds" > Meds  </a></li>
         <li><a href="#/xrays"> Xrays </a></li>
         <li><a href="#/notes"> Notes </a></li>
