add video & stats pages

--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,8 @@
         <li><a href="#/meds" > Meds  </a></li>
         <li><a href="#/xrays"> Xrays </a></li>
         <li><a href="#/notes"> Notes </a></li>
+        <li><a href="#/video"> Video </a></li>
+        <li><a href="#/stats"> Stats </a></li>
         <li><a href="#/costs"> Costs </a></li>
       </ul>
     </div>
